[package]
name = "unfair_catan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6.0", features = ["dynamic"] }
futures-util = "0.3.21"
tokio-stream = "0.1.8"
flume = "0.10.11"
warp = "0.2"
futures = "0.3.21"
tokio = { version = "0.2", features = ["full"] }
anyhow = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
